--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
         <a href="#" class="logo"><img src="images/logo02.png" alt="logo"></a>
         <div class="user_info">
             <img src="images/2.jpg" alt="person">
-            <span>欢迎&nbsp;&nbsp;李思思</span>
+            <span>欢迎&nbsp;&nbsp;<i style="font-style: normal;"></i></span>
             <b>管理员</b>
         </div>
         <!-- 左侧导航栏 -->
@@ -54,5 +54,40 @@
 
         </div>
     </div>
+    <script>
+        $(function () {
+            $.ajax({
+                type: 'get',
+                // 使用$.ajaxSetup()在jQuery文件中设置全局配置
+                // 发送ajax请求前会运行这个函数,在这个函数中设置token令牌
+                // headers: {
+                //     Authorization: localStorage.getItem('token')
+                // },
+                url: 'http://localhost:8080/api/v1/admin/user/info',
+                success: function (backData) {
+                    console.log(backData);
+                    if (backData.code == 200) {
+                        $('.user_info>img').attr('src', backData.data.userPic)
+                        $('.user_info>span>i').text(backData.data.nickname)
+                        $('.user_center_link>img').attr('src', backData.data.userPic)
+                    }
+                }
+            })
+
+
+            // 二:退出
+            $('.logout').on('click', function (e) {
+                e.preventDefault()
+                // 删除token
+                localStorage.removeItem('token')
+                // 回到登录页
+                window.location.href = './login.html'
+            })
+        })
+
+
+
+    </script>
 </body>
+
 </html>
