--- a/admin/login.html
+++ b/admin/login.html
@@ -40,6 +40,73 @@
 
 
   <!-- 使用bootstrap的模态框 -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">确定</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <script>
+    $(function () {
+      $('.input_sub').on('click', function (e) {
+        // 阻止浏览器的默认跳转
+        e.preventDefault();
+        // 获取用户名跟密码
+        let username = $('.input_txt').val().trim()
+        let password = $('.input_pass').val().trim()
+        // 非空判断
+        if (username == '' || password == '') {
+          // alert('帐号密码不能为空')
+          $('.modal-body').text('帐号或密码不能为空');
+          $('#myModal').modal();
+          return;
+        }
+        // 发送ajax请求
+        $.ajax({
+          type: 'post',
+          url: 'http://localhost:8080/api/v1/admin/user/login',
+          data: {
+            username: username,
+            password: password
+          },
+          success: function (backData) {
+            if (backData.code == 200) {
+              // alert(backData.msg)
+              $('.modal-body').text(backData.msg);
+              $('#myModal').modal(
+                { keyboard: true }
+              );
+              $('#myModal').on('hidden.bs.modal', function (e) {
+                // 把服务器返回回来的token令牌保存到本地
+                localStorage.setItem('token',backData.token)
+                window.location.href = './index.html'
+              })
+            } else {
+              $('.modal-body').text(backData.msg);
+              $('#myModal').modal(
+                { keyboard: true }
+              );
+            }
+          }
+        })
+      })
+    })
+
+  </script>
 
 </body>
 
