--- a/admin/login.html
+++ b/admin/login.html
@@ -15,6 +15,8 @@
   <script src="./libs/jquery-1.12.4.min.js"></script>
   <!-- 引入bootstrap的js文件 -->
   <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
+  <!-- 引入接口地址js -->
+  <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -78,7 +80,7 @@
         // 发送ajax请求
         $.ajax({
           type: 'post',
-          url: 'http://localhost:8080/api/v1/admin/user/login',
+          url: BigNew.user_login,
           data: {
             username: username,
             password: password
@@ -87,9 +89,7 @@
             if (backData.code == 200) {
               // alert(backData.msg)
               $('.modal-body').text(backData.msg);
-              $('#myModal').modal(
-                { keyboard: true }
-              );
+              $('#myModal').modal();
               $('#myModal').on('hidden.bs.modal', function (e) {
                 // 把服务器返回回来的token令牌保存到本地
                 localStorage.setItem('token',backData.token)
@@ -97,9 +97,7 @@
               })
             } else {
               $('.modal-body').text(backData.msg);
-              $('#myModal').modal(
-                { keyboard: true }
-              );
+              $('#myModal').modal();
             }
           }
         })
