--- a/admin/article_category.html
+++ b/admin/article_category.html
@@ -14,6 +14,7 @@
     <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./libs/template-web.js"></script>
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -51,5 +52,13 @@
             </table>
         </div>
     </div>
+
+
+    <script>
+        $(function(){
+            
+        })
+    </script>
+</body>
 
 </html>
