完成文章类别管理渲染

--- a/admin/user.html
+++ b/admin/user.html
@@ -144,30 +144,25 @@
                     success: function (backData) {
                         console.log(backData);
                         if (backData.code == 200) {
-                            $('.modal-body').text('修改成功');
-                            $('#myModal').modal();
-                            $('#myModal').on('hidden.bs.modal', function (e) {
-                                // 第一种方法,刷新页面
-                                // parent.window.location.reload()
-                                // 第二种方法,获取管理员信息重新渲染
-                                $.ajax({
-                                    type: 'get',
-                                    url: window.BigNew.user_info,
-                                    success: function (backData) {
-                                        // console.log(backData);
-
-                                        // 给父页面的个人信息设置新的值
-                                        parent.$('.user_info>img').attr('src', backData.data.userPic)
-                                        parent.$('.user_info>span>i').text(backData.data.nickname)
-                                        parent.$('.user_center_link>img').attr('src', backData.data.userPic)
-                                    }
-                                })
+                            alert('修改成功')
+                            // 第一种方法,刷新页面
+                            // parent.window.location.reload()
+                            // 第二种方法,获取管理员信息重新渲染
+                            $.ajax({
+                                type: 'get',
+                                url: window.BigNew.user_info,
+                                success: function (backData) {
+                                    // console.log(backData);
+                                    // 给父页面的个人信息设置新的值
+                                    parent.$('.user_info>img').attr('src', backData.data.userPic)
+                                    parent.$('.user_info>span>i').text(backData.data.nickname)
+                                    parent.$('.user_center_link>img').attr('src', backData.data.userPic)
+                                }
                             })
                         }
                     }
                 })
             })
-
         })
     </script>
 </body>
