--- a/admin/article_category.html
+++ b/admin/article_category.html
@@ -54,9 +54,37 @@
     </div>
 
 
+    <script id="art_cate_temp" type="text/html">
+        {{each data v}}
+        <tr>
+            <td>{{v.name}}</td>
+            <td>{{v.slug}}</td>
+            <td class="text-center">
+            <a href="javascript:void(0)" data-id={{v.id}} data-toggle="modal" class=" btn btn-info btn-xs">编辑</a>
+            <a href="javascript:void(0)" data-id={{v.id}} class="btn btn-danger btn-xs">删除</a>
+            </td>
+        </tr>
+         {{/each}}
+     </script>
+
+
+
     <script>
-        $(function(){
-            
+        $(function () {
+            // 一进入就发送ajax请求渲染到页面上
+            $.ajax({
+                type: 'get',
+                url: BigNew.category_list,
+                success: function (backData) {
+                    // console.log(backData);
+                    if (backData.code == 200) {
+                        // 调用模板引擎的核心方法
+                        let resHtml = template('art_cate_temp', backData)
+                        // 加入到tbody里面
+                        $('tbody').html(resHtml)
+                    }
+                }
+            })
         })
     </script>
 </body>
